--- a/css/_colors.scss
+++ b/css/_colors.scss
@@ -3,3 +3,7 @@ $main-layout-bgcolor: rgba(238, 220, 220, .2);
 $header-bgcolor: rgba(100, 100, 100, .01);
 $header-link-color: #000000;
 $header-line: #EFEEF3;
+
+$banner-bgcolor: rgba(100, 100, 100, .1);
+$slider-bgcolor: gray;
+$slider-control-bgcolor: #16133E;
