--- a/css/_colors.scss
+++ b/css/_colors.scss
@@ -1,9 +1,31 @@
-
 $main-layout-bgcolor: rgba(238, 220, 220, .2);
+
 $header-bgcolor: rgba(100, 100, 100, .01);
 $header-link-color: #000000;
+$header-log-in-bgcolor: #16133E;
+$header-log-in-border: #16133E;
+$header-log-in-color: #FFFFFF;
+$header-sign-in-border: #16133E;
+$header-sign-in-color: #000000;
 $header-line: #EFEEF3;
 
-$banner-bgcolor: rgba(100, 100, 100, .1);
 $slider-bgcolor: gray;
 $slider-control-bgcolor: #16133E;
+$slider-control-border: silver;
+
+$banner-bgcolor: rgba(100, 100, 100, .1);
+$banner-title-color: #16133E;
+$banner-descript-color: #183B56;
+$banner-view-projects-bgcolor: #007FFC;
+$banner-view-projects-color: #FFFFFF;
+$banner-learn-more-border: #007FFC;
+$banner-learn-more-color: #007FFC;;
+
+$pre-section-title-color:  #87A1B6;
+$section-title-color: #16133E;
+$section-description-color: #5A7184;
+
+$service-bgcolor: rgba(100, 100, 100, .1);
+$service-content-group-bgcolor: #eaebef;
+$service-content-group-border: #E5EAF4;
+$service-content-group-border: #143f98;
