--- a/css/_fonts.scss
+++ b/css/_fonts.scss
@@ -1,8 +1,73 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;1,200;1,300;1,400;1,600;1,700&display=swap');
+
+
+
 %header-link-font {
   font-family: Roboto;
   font-style: normal;
   font-weight: 500;
-  font-size: calc(1rem + 1vw);
+  font-size: calc(0.7rem + 0.5vw);
   line-height: 16px;
 }
+
+%header-login-btn-font {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 16px;
+}
+
+%banner-title-font {
+  font-size: clamp(16px, 0.3rem + 0.3em + 1.8vw, 38px);
+  font-family: Nunito Sans;
+  font-style: normal;
+  font-weight: 600;
+  //font-size: 56px;
+  line-height: min(40px, 1rem + 1vw);
+}
+
+%banner-descript-font {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: clamp(8px, 0.3rem + 0.3em + 0.6vw, 30px);
+  line-height: min(36px, 2.5vw);
+}
+
+%banner-button-font {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 16px;
+}
+
+%pre-section-title-font {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 16px;
+  text-transform: uppercase;
+}
+
+%section-title-font {
+  font-family: Nunito Sans;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 40px;
+  line-height: 52px;
+}
+
+%section-description-font {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 16px;
+}
+
 
