--- a/css/_service.scss
+++ b/css/_service.scss
@@ -1,6 +1,51 @@
-.service {
-  width: 1162px;
-  height: 529px;
 
-  background: rgba(100, 100, 100, .01);
+.service {
+  @extend %service-size;
+  background: $service-bgcolor;
+
+  .content-group {
+    border: 1px solid $service-content-group-border;
+    box-sizing: border-box;
+    border-radius: 8px;
+    background-color: $service-content-group-bgcolor;
+    padding: clamp(12px, 2.5vw, 40px);
+
+    .group-icon {
+      width: 46px;
+      height: 42px;
+      display: block;
+      margin-bottom: 10px;
+      padding: 8px;
+      border: 2px solid grey;
+      border-radius: 8px;
+    }
+
+    .group-header {
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 24px;
+      line-height: 52px;
+      color: #16133E;
+    }
+
+    .group-content {
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 16px;
+      line-height: 28px;
+      color: #16133E;
+    }
+
+    .learn-more {
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 16px;
+      line-height: 52px;
+      color: #16133E;
+    }
+  }
 }
+
