--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ section .section-description > * {
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
-  justify-content: normal;
+  justify-content: space-between;
   align-items: center;
 }
 .main-layout .header {
@@ -141,61 +141,53 @@ section .section-description > * {
   align-items: flex-start;
 }
 .main-layout .features {
-  display: grid;
-  grid-template-areas: "pre-section-title ." "section-title section-title " "section-description section-description" "img-placeholder-1 img-placeholder-2";
-  grid-template-rows: 1fr 1fr 1fr 4fr;
-  grid-template-columns: 1fr 1fr;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
 }
-.main-layout .features .pre-section-title {
-  grid-area: pre-section-title;
-}
-.main-layout .features .section-title {
-  grid-area: section-title;
-}
-.main-layout .features .section-description {
-  grid-area: section-description;
-}
-.main-layout .features .img-placeholder-1 {
-  grid-area: img-placeholder-1;
-}
-.main-layout .features .img-placeholder-2 {
-  grid-area: img-placeholder-2;
+.main-layout .features .img-placeholder {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-end;
 }
 .main-layout .price {
-  display: grid;
-  grid-template-areas: "section-title section-title section-title" "section-description section-description section-description" "started-plan-first started-plan-second started-plan-third";
-  grid-template-rows: 1fr 1fr 4fr;
-  grid-template-columns: 1fr 1fr 1fr;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 5px;
 }
-.main-layout .price .section-title {
-  grid-area: section-title;
+.main-layout .price .price-layout {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: flex-end;
+  gap: 25px;
 }
-.main-layout .price .section-description {
-  grid-area: section-description;
-}
-.main-layout .price .started-plan-first {
-  grid-area: started-plan-first;
-}
-.main-layout .price .started-plan-second {
-  grid-area: started-plan-second;
-}
-.main-layout .price .started-plan-third {
-  grid-area: started-plan-third;
+.main-layout .price .price-layout .started-plan {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: nowrap;
 }
 .main-layout .free {
-  display: grid;
-  grid-template-areas: "section-title" "section-description" "button-box";
-  grid-template-rows: 1fr 1fr 2fr;
-  grid-template-columns: auto;
-}
-.main-layout .free .section-title {
-  grid-area: section-title;
-}
-.main-layout .free .section-description {
-  grid-area: section-description;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+  align-items: center;
 }
 .main-layout .free .button-box {
-  grid-area: button-box;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-evenly;
+  align-items: center;
 }
 .main-layout .footer {
   display: grid;
@@ -219,7 +211,7 @@ section .section-description > * {
   grid-area: copyright;
 }
 
-.features {
+.free {
   border: 1px solid dimgray;
 }
 
@@ -414,21 +406,154 @@ section .section-description > * {
 }
 
 .features {
-  width: 1157px;
+  width: clamp(640px, 100%, 1160px);
   height: 693px;
+  background: rgba(100, 100, 100, 0.01);
+}
+.features .img-placeholder {
+  width: clamp(600px, 100%, 1200px);
+}
+.features .img-placeholder .card {
+  position: relative;
+  border-radius: 8px;
+}
+.features .img-placeholder .card .features-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.features .img-placeholder .card .comment-img {
+  display: block;
+  position: absolute;
+  left: 15%;
+  right: 15%;
+  bottom: 10%;
+  top: 70%;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: clamp(18px, 3vw, 36px);
+  line-height: clamp(24px, 4.5vw, 48px);
+  color: #FFFFFF;
 }
 
 .price {
-  width: 1140px;
+  width: min(1140px, 100%);
   height: 610px;
   background: rgba(100, 100, 100, 0.01);
+}
+.price .started-plan {
+  background: #FFFFFF;
+  background: rgba(100, 100, 100, 0.3);
+  box-shadow: 0px 2px 35px rgba(0, 0, 0, 0.03);
+  border-radius: 0px 0px 8px 8px;
+  padding-top: 0;
+  padding-bottom: 40px;
+  width: clamp(200px, calc(100% - 4vw / 3 * 10px), 362px);
+  height: min(436px, 280px + 8vw);
+}
+.price .started-plan .thick-line {
+  width: 100%;
+  height: calc(1vw / 3);
+  margin: 0;
+}
+.price .started-plan .plan-name {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 32px;
+  color: #16133E;
+}
+.price .started-plan .plan-cost {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 40px;
+  line-height: 52px;
+  text-align: center;
+}
+.price .started-plan .plan-periodicity {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 24px;
+  color: #87A1B6;
+}
+.price .started-plan .plan-description {
+  display: block;
+  width: 70%;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 28px;
+  text-align: center;
+  color: #87A1B6;
+}
+.price .started-plan .button-get-started {
+  border-radius: 25px;
+  border: 2px solid black;
+  background: lightyellow;
+  width: min(181px, 2rem + 16vw);
+  height: min(50px, 1rem + 2vw);
+}
+.price .started-plan.started-plan-first .thick-line {
+  background: #0593FA;
+}
+.price .started-plan.started-plan-first .plan-cost {
+  color: #0593FA;
+}
+.price .started-plan.started-plan-second .thick-line {
+  background: #56CBAE;
+}
+.price .started-plan.started-plan-second .plan-cost {
+  color: #56CBAE;
+}
+.price .started-plan.started-plan-third .thick-line {
+  background: #FA6770;
+}
+.price .started-plan.started-plan-third .plan-cost {
+  color: #FA6770;
 }
 
 .free {
   width: min(100%, 1152px);
   height: 387px;
-  /*background: rgba(100, 100, 100, .3);*/
   background-image: url("../img/ada-bg.png");
+  padding: clamp(20px, calc((100% - 400px) / 2) , 60px);
+}
+.free .section-title > * {
+  color: #FFFFFF;
+}
+.free .section-description > * {
+  color: #FFFFFF;
+}
+.free button {
+  margin: 0 max(10px, 2vw);
+}
+.free .button-try {
+  border-radius: 23px;
+  padding: 5px 45px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 16px;
+  color: #16133E;
+}
+.free .button-watch-demo {
+  border: 2px solid #FFFFFF;
+  border-radius: 23px;
+  background-color: #007FFC;
+  padding: 5px 45px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 16px;
+  color: #FFFFFF;
 }
 
 .footer {
