--- a/css/_grid.scss
+++ b/css/_grid.scss
@@ -34,8 +34,9 @@
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
-  justify-content: normal;
+  justify-content: space-between;
   align-items: center;
+  //gap: ;
 
   .header {
     display: grid;
@@ -149,85 +150,58 @@
   }
 
   .features {
-    display: grid;
-    grid-template-areas:
-    "pre-section-title ."
-    "section-title section-title "
-    "section-description section-description"
-    "img-placeholder-1 img-placeholder-2";
-    grid-template-rows: 1fr 1fr 1fr 4fr;
-    grid-template-columns: 1fr 1fr;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
 
-    .pre-section-title {
-      grid-area: pre-section-title;
-    }
-
-    .section-title {
-      grid-area: section-title;
-    }
-
-    .section-description {
-      grid-area: section-description;
-    }
-
-    .img-placeholder-1 {
-      grid-area: img-placeholder-1;
-    }
-
-    .img-placeholder-2 {
-      grid-area: img-placeholder-2;
+    .img-placeholder {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: flex-end;
+      //gap: 18px;
     }
   }
 
   .price {
-    display: grid;
-    grid-template-areas:
-    "section-title section-title section-title"
-    "section-description section-description section-description"
-    "started-plan-first started-plan-second started-plan-third";
-    grid-template-rows: 1fr 1fr 4fr;
-    grid-template-columns: 1fr 1fr 1fr;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 5px;
 
-    .section-title {
-      grid-area: section-title;
-    }
-
-    .section-description {
-      grid-area: section-description;
-    }
-
-    .started-plan-first {
-      grid-area: started-plan-first;
-    }
-
-    .started-plan-second {
-      grid-area: started-plan-second;
-    }
-
-    .started-plan-third {
-      grid-area: started-plan-third;
+    .price-layout {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: nowrap;
+      justify-content: space-between;
+      align-items: flex-end;
+      gap: 25px;
+      .started-plan {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: nowrap;
+      }
     }
   }
 
   .free {
-    display: grid;
-    grid-template-areas:
-    "section-title"
-    "section-description"
-    "button-box";
-    grid-template-rows: 1fr 1fr 2fr;
-    grid-template-columns: auto;
-
-    .section-title {
-      grid-area: section-title;
-    }
-
-    .section-description {
-      grid-area: section-description;
-    }
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+    align-items: center;
 
     .button-box {
-      grid-area: button-box;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: nowrap;
+      justify-content: space-evenly ;
+      align-items: center;
     }
   }
 
