--- a/css/_price.scss
+++ b/css/_price.scss
@@ -1,6 +1,104 @@
 .price {
-  width: 1140px;
+  width: min(1140px, 100%);
   height: 610px;
-
   background: rgba(100, 100, 100, .01);
+
+  .started-plan {
+    background: #FFFFFF;
+    background: rgba(100, 100, 100, .3);
+    box-shadow: 0px 2px 35px rgba(0, 0, 0, 0.03);
+    border-radius: 0px 0px 8px 8px;
+    padding-top: 0;
+    padding-bottom: 40px;
+    width: clamp(200px,  calc(100% - 4vw / 3 * 10px), 362px);
+    height: min(436px, 280px + 8vw);
+
+    .thick-line {
+      width: 100%;
+      height: calc(1vw / 3);
+      margin: 0;
+    }
+
+    .plan-name {
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 24px;
+      line-height: 32px;
+      color: #16133E;
+    }
+
+    .plan-cost {
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: bold;
+      font-size: 40px;
+      line-height: 52px;
+      text-align: center;
+
+    }
+
+    .plan-periodicity {
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 16px;
+      line-height: 24px;
+      color: #87A1B6;
+    }
+
+    .plan-description {
+      display: block;
+      width: 70%;
+
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 16px;
+      line-height: 28px;
+      text-align: center;
+      color: #87A1B6;
+    }
+
+    .button-get-started {
+      border-radius: 25px;
+      //padding: 8px 20px;
+      //margin: 0 auto;
+      border: 2px solid black;
+      background: lightyellow;
+      width: min(181px, 2rem + 16vw);
+      height: min(50px, 1rem + 2vw);
+    }
+
+    &.started-plan-first {
+
+      .thick-line {
+        background: #0593FA;
+      }
+      .plan-cost {
+        color: #0593FA;
+      }
+    }
+
+    &.started-plan-second {
+
+      .thick-line {
+        background: #56CBAE;
+      }
+      .plan-cost {
+        color: #56CBAE;
+      }
+    }
+
+    &.started-plan-third {
+
+      .thick-line {
+        background: #FA6770;
+      }
+      .plan-cost {
+        color: #FA6770;
+      }
+    }
+  }
+
 }
