--- a/css/style.css
+++ b/css/style.css
@@ -191,12 +191,19 @@ section .section-description > * {
 }
 .main-layout .footer {
   display: grid;
-  grid-template-areas: "general-info services company contacts" ". copyright copyright .";
-  grid-template-rows: 4fr 1fr;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-areas: "general-info services company contacts" "copyright copyright copyright copyright";
+  grid-template-rows: 1fr 15%;
+  grid-template-columns: auto;
+  gap: 3px 3px;
 }
 .main-layout .footer .general-info {
   grid-area: general-info;
+}
+.main-layout .footer .general-info .network-links {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 2.3vw;
 }
 .main-layout .footer .services {
   grid-area: services;
@@ -559,7 +566,81 @@ section .section-description > * {
 .footer {
   width: min(100%, 1440px);
   height: 574px;
+  padding-top: max(15px, 3vw);
   background: #16143D;
+}
+.footer > * {
+  padding: clamp(5px, 2vw, 15px);
+}
+.footer ul {
+  list-style-type: none;
+  padding-inline-start: 5px;
+}
+.footer li {
+  margin-bottom: 20px;
+}
+.footer a {
+  text-decoration: none;
+  letter-spacing: 1.76471px;
+  color: #FFFFFF;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: clamp(10px, 1.5vw, 15px);
+  line-height: 22px;
+}
+.footer a.email-address {
+  font-size: clamp(10px, 2.1vw, 25px);
+}
+.footer .general-info .general-info-description {
+  display: block;
+  padding: 2vw;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 28px;
+  color: #FFFFFF;
+}
+.footer .services em {
+  height: 22px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 17px;
+  line-height: 22px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+}
+.footer .company em {
+  height: 22px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 17px;
+  line-height: 22px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+}
+.footer .contacts em {
+  height: 22px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 17px;
+  line-height: 22px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+}
+.footer .copyright {
+  text-align: center;
+  padding: 8px;
+}
+.footer .copyright em.copyright-text {
+  color: #FFFFFF;
 }
 
 /*# sourceMappingURL=style.css.map */
